--- a/src/components/NavTabs.css
+++ b/src/components/NavTabs.css
@@ -1,7 +1,20 @@
+nav .navbar-nav li a {
+  color: black !important;
+}
+
 .navbar-brand {
   font-family: "Anton", sans-serif;
+  font-size: 38px !important;
 }
 
 .nav-item {
   font-family: "Source Code Pro", monospace;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.active {
+  text-decoration: underline !important;
 }
