--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
 body {
-  background-color: lavender !important;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  background-color: rgb(238 227 219) !important;
 }
