added comments to my code and re-ordering the css files

--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -1,9 +1,9 @@
-.coni {
+.intro {
   font-family: "Anton", sans-serif;
   font-size: 60px !important;
   color: #b585d6;
 }
 
-.subConi {
+.aboutMe {
   font-family: "Source Code Pro", monospace;
 }
